# walmart-tabular-shift

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.ipynb
configs/: lightgbm.yaml  tabm.yaml  tabpfn.yaml  tabr.yaml  xgboost.yaml
docs/superpowers/plans/: 2026-06-10-tabular-shift-study.md
docs/superpowers/specs/: 2026-06-10-tabular-shift-study-design.md
scripts/: build_features.py  download_data.py  make_charts.py  make_report.py  predict_real.py  run_crossover.py  run_experiment.py  tune.py
src/shift_study/: data.py  features.py  metrics.py  splits.py
src/shift_study/models/: base.py  lgbm.py  tabm.py  tabpfn.py  tabr.py  torch_common.py  xgb.py
tests/: test_build_features_script.py  test_data.py  test_features.py  test_make_report.py  test_metrics.py  test_models_tabpfn.py  test_models_torch.py  test_models_trees.py  test_run_experiment.py  test_splits.py
